--- a/server/api/package.json
+++ b/server/api/package.json
@@ -3,13 +3,30 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node ./src/server.ts",
+    "dev": "ts-node-dev --poll --no-notify ./src/server.ts"
   },
   "author": "",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@types/morgan": "^1.7.35",
+    "@types/node": "^10.9.3",
+    "@types/node-uuid": "0.0.28",
     "prettier": "^1.14.2",
+    "ts-node": "^7.0.1",
+    "ts-node-dev": "^1.0.0-pre.26",
     "tslint-config-prettier": "^1.15.0",
-    "tslint-consistent-codestyle": "^1.13.3"
+    "tslint-consistent-codestyle": "^1.13.3",
+    "typescript": "^3.0.1"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "error-middleware": "^3.0.0",
+    "express": "^4.16.3",
+    "express-http-context": "^1.0.4",
+    "express-validator": "^5.3.0",
+    "morgan": "^1.9.0",
+    "node-uuid": "^1.4.8",
+    "winston": "^3.0.0"
   }
 }
