--- a/server/api/package.json
+++ b/server/api/package.json
@@ -12,6 +12,8 @@
     "@types/morgan": "^1.7.35",
     "@types/node": "^10.9.3",
     "@types/node-uuid": "0.0.28",
+    "@types/passport": "^0.4.6",
+    "dumper.js": "^1.1.1",
     "prettier": "^1.14.2",
     "ts-node": "^7.0.1",
     "ts-node-dev": "^1.0.0-pre.26",
@@ -21,12 +23,16 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
     "error-middleware": "^3.0.0",
     "express": "^4.16.3",
     "express-http-context": "^1.0.4",
+    "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
     "morgan": "^1.9.0",
     "node-uuid": "^1.4.8",
+    "passport": "^0.4.0",
+    "passport-linkedin-oauth2": "^1.5.0",
     "winston": "^3.0.0"
   }
 }
