--- a/server/api/package.json
+++ b/server/api/package.json
@@ -17,6 +17,7 @@
     "prettier": "^1.14.2",
     "ts-node": "^7.0.1",
     "ts-node-dev": "^1.0.0-pre.26",
+    "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-consistent-codestyle": "^1.13.3",
     "typescript": "^3.0.1"
