--- a/server/api/package.json
+++ b/server/api/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "scripts": {
     "start": "ts-node ./src/server.ts",
-    "dev": "ts-node-dev --poll --no-notify ./src/server.ts",
+    "dev": "npm run migrate && ts-node-dev --poll --no-notify ./src/server.ts",
     "lint": "tslint --exclude **/*.d.ts src/**/*.ts",
-    "tslint-check": "tslint-config-prettier-check ./tslint.json"
+    "tslint-check": "tslint-config-prettier-check ./tslint.json",
+    "migrate": "ts-node ./tasks/migrate"
   },
   "author": "",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@types/knex": "^0.14.23",
     "@types/morgan": "^1.7.35",
     "@types/node": "^10.9.3",
     "@types/node-uuid": "0.0.28",
@@ -32,10 +34,12 @@
     "express-http-context": "^1.0.4",
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
+    "knex": "^0.15.2",
     "morgan": "^1.9.0",
     "node-uuid": "^1.4.8",
     "passport": "^0.4.0",
     "passport-linkedin-oauth2": "^1.5.0",
+    "pg": "^7.4.3",
     "winston": "^3.0.0"
   }
 }
