--- a/server/api/package.json
+++ b/server/api/package.json
@@ -7,17 +7,27 @@
     "dev": "npm run migrate && ts-node-dev --poll --no-notify ./src/server.ts",
     "lint": "tslint --exclude **/*.d.ts src/**/*.ts",
     "tslint-check": "tslint-config-prettier-check ./tslint.json",
-    "migrate": "ts-node ./tasks/migrate"
+    "migrate": "ts-node ./tasks/migrate",
+    "test": "npm run migrate && mocha -r ts-node/register spec/**/*.spec.ts --exit",
+    "test:report": "npm run migrate && mocha -r ts-node/register spec/**/*.spec.ts --reporter mocha-junit-reporter",
+    "test:watch": "npm run migrate && mocha -w -r ts-node/register --watch-extensions ts ./spec/**/*.spec.ts"
   },
   "author": "",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@types/chai": "^4.1.4",
+    "@types/chai-http": "^3.0.5",
     "@types/knex": "^0.14.23",
+    "@types/mocha": "^5.2.5",
     "@types/morgan": "^1.7.35",
     "@types/node": "^10.9.3",
     "@types/node-uuid": "0.0.28",
     "@types/passport": "^0.4.6",
+    "chai": "^4.1.2",
+    "chai-http": "^4.2.0",
     "dumper.js": "^1.1.1",
+    "mocha": "^5.2.0",
+    "mocha-junit-reporter": "^1.18.0",
     "prettier": "^1.14.2",
     "ts-node": "^7.0.1",
     "ts-node-dev": "^1.0.0-pre.26",
