--- a/server/api/package.json
+++ b/server/api/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/chai": "^4.1.4",
     "@types/chai-http": "^3.0.5",
+    "@types/express-session": "^1.15.10",
     "@types/knex": "^0.14.23",
     "@types/mocha": "^5.2.5",
     "@types/morgan": "^1.7.35",
