--- a/server/api/package.json
+++ b/server/api/package.json
@@ -27,6 +27,7 @@
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
     "dumper.js": "^1.1.1",
+    "husky": "^0.14.3",
     "mocha": "^5.2.0",
     "mocha-junit-reporter": "^1.18.0",
     "prettier": "^1.14.2",
@@ -52,5 +53,16 @@
     "passport-linkedin-oauth2": "^1.5.0",
     "pg": "^7.4.3",
     "winston": "^3.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx,scss,md,css}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
