--- a/api/package.json
+++ b/api/package.json
@@ -42,6 +42,7 @@
     "cookie-parser": "^1.4.3",
     "error-middleware": "^3.0.0",
     "express": "^4.16.3",
+    "express-async-handler": "^1.1.4",
     "express-http-context": "^1.0.4",
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
