--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/chai": "^4.1.4",
     "@types/chai-http": "^3.0.5",
+    "@types/cors": "^2.8.4",
     "@types/express-rate-limit": "^2.9.3",
     "@types/express-session": "^1.15.10",
     "@types/knex": "^0.14.23",
@@ -41,6 +42,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
     "error-middleware": "^3.0.0",
     "express": "^4.16.3",
     "express-async-handler": "^1.1.4",
