--- a/api/package.json
+++ b/api/package.json
@@ -7,31 +7,27 @@
     "dev": "npm run migrate && ts-node-dev --poll --no-notify ./src/server.ts",
     "lint": "tslint --exclude **/*.d.ts src/**/*.ts",
     "migrate": "ts-node ./tasks/migrate",
-    "test": "npm run migrate && mocha -r ts-node/register spec/**/*.spec.ts --exit",
-    "test-report": "npm run migrate && mocha -r ts-node/register spec/**/*.spec.ts --reporter mocha-junit-reporter",
-    "test-watch": "npm run migrate && mocha -w -r ts-node/register --watch-extensions ts ./spec/**/*.spec.ts"
+    "test": "npm run migrate && jest --watchAll --colors --verbose"
   },
   "author": "",
   "license": "UNLICENSED",
   "devDependencies": {
-    "@types/chai": "^4.1.4",
-    "@types/chai-http": "^3.0.5",
     "@types/cors": "^2.8.4",
     "@types/express-rate-limit": "^2.9.3",
     "@types/express-session": "^1.15.10",
+    "@types/jest": "^23.3.1",
     "@types/knex": "^0.14.23",
-    "@types/mocha": "^5.2.5",
     "@types/morgan": "^1.7.35",
     "@types/node": "^10.9.3",
     "@types/node-uuid": "0.0.28",
     "@types/passport": "^0.4.6",
-    "chai": "^4.1.2",
     "chai-http": "^4.2.0",
     "dumper.js": "^1.1.1",
     "husky": "^0.14.3",
-    "mocha": "^5.2.0",
+    "jest": "^23.5.0",
     "mocha-junit-reporter": "^1.18.0",
     "prettier": "^1.14.2",
+    "ts-jest": "^23.1.4",
     "ts-node": "^7.0.1",
     "ts-node-dev": "^1.0.0-pre.26",
     "tslint": "^5.11.0",
