Add flags to fix jest random error issue and to add coverage

--- a/api/package.json
+++ b/api/package.json
@@ -7,9 +7,8 @@
     "dev": "npm run migrate && ts-node-dev --poll --no-notify ./src/server.ts",
     "lint": "tslint --exclude **/*.d.ts src/**/*.ts",
     "migrate": "ts-node ./tasks/migrate",
-    "test": "npm run migrate && jest --watchAll --colors --verbose"
+    "test": "npm run migrate && jest --colors --verbose -i --coverage --detectOpenHandles"
   },
-  "author": "",
   "license": "UNLICENSED",
   "devDependencies": {
     "@types/cors": "^2.8.4",
