--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "api-start": "cd api && docker-compose up",
     "api-test": "cd api && docker-compose -f docker-compose.tests-services.yml up",
     "api-npm": "cd api && docker-compose run --service-ports --rm api npm",
-    "create-client": "cd ./client-generator && npm i && npm run create"
+    "create-client": "cd ./client-generator && npm i && npm run create",
+    "start": "docker-compose up"
   },
   "repository": {
     "type": "git",
