--- a/client-generator/package.json
+++ b/client-generator/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "colors": "^1.3.2",
     "recursive-readdir": "^2.2.2",
+    "replace-in-file": "^3.4.2",
     "shelljs": "^0.8.2"
   }
 }
