--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "AE Node boilerplate meta project",
   "scripts": {
     "create-client": "cd ./client-generator && npm run create",
-    "api-npm": "cd api && docker-compose run --rm api npm",
+    "api-npm-d": "cd api && docker-compose run --rm api npm -D",
+    "api-npm-s": "cd api && docker-compose run --rm api npm -S",
     "api-start": "cd api && docker-compose up",
-    "api-test": "cd api && docker-compose -f docker-compose.tests-services.yml up",
+    "api-test": "cd api && docker-compose -f docker-compose.tests-services.yml up --remove-orphans",
     "stop-containers": "docker stop $(docker ps -a -q)",
     "first-run": "npm run create-client && npm run api-npm i && npm run stop-containers && npm start",
     "show-containers": "docker ps --format 'table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}'",
