--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
     "dev": "npm run migrate && ts-node-dev --poll --no-notify ./src/server.ts",
     "lint": "tslint --exclude **/*.d.ts src/**/*.ts",
     "migrate": "ts-node ./tasks/migrate",
-    "test": "npm run migrate && jest --watchAll --colors --verbose -i --detectOpenHandles"
+    "test": "npm run migrate && jest -i --watchAll --colors --verbose --coverage --detectOpenHandles"
   },
   "license": "UNLICENSED",
   "devDependencies": {
@@ -16,6 +16,7 @@
     "@types/express-session": "^1.15.10",
     "@types/jest": "^23.3.1",
     "@types/knex": "^0.14.23",
+    "@types/lodash.clone": "^4.5.4",
     "@types/morgan": "^1.7.35",
     "@types/node": "^10.9.3",
     "@types/node-uuid": "0.0.28",
@@ -48,6 +49,7 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
     "knex": "^0.15.2",
+    "lodash.clone": "^4.5.0",
     "morgan": "^1.9.0",
     "node-uuid": "^1.4.8",
     "passport": "^0.4.0",
