--- a/api/package.json
+++ b/api/package.json
@@ -22,11 +22,9 @@
     "@types/node-uuid": "0.0.28",
     "@types/passport": "^0.4.6",
     "@types/supertest": "^2.0.6",
-    "chai-http": "^4.2.0",
     "dumper.js": "^1.1.1",
     "husky": "^0.14.3",
     "jest": "^23.5.0",
-    "mocha-junit-reporter": "^1.18.0",
     "prettier": "^1.14.2",
     "supertest": "^3.3.0",
     "ts-jest": "^23.1.4",
@@ -55,6 +53,7 @@
     "passport": "^0.4.0",
     "passport-linkedin-oauth2": "^1.5.0",
     "pg": "^7.4.3",
+    "snakecase-keys": "^1.2.0",
     "winston": "^3.0.0"
   },
   "husky": {
