--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "AE Node boilerplate meta project",
   "scripts": {
-    "first-run": "npm i && npm run api-npm-i && npm run stop-containers && npm run create-client",
+    "krei": "rm -rf .git && npm i && npm run api-npm-i && npm run stop-containers && npm run create-client && rm -rf client-generator",
     "create-client": "cd ./client-generator && npm run create",
     "api-npm-i-d": "cd api && docker-compose run --rm api npm i -D",
     "api-npm-i-s": "cd api && docker-compose run --rm api npm i -S",
@@ -35,12 +35,12 @@
   },
   "homepage": "https://github.com/agencyenterprise/ae-node-boilerplate#readme",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "ts-node": "^7.0.1",
+    "@types/node": "^10.9.4",
+    "typescript": "^3.0.3"
   },
   "devDependencies": {
-    "@types/node": "^10.9.4",
-    "prettier": "^1.14.2",
-    "ts-node": "^7.0.1",
-    "typescript": "^3.0.3"
+    "prettier": "^1.14.2"
   }
 }
