--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "api-npm-i-s": "cd api && docker-compose run --rm api npm i -S",
     "api-npm-i": "cd api && docker-compose run --rm api npm i",
     "api-start": "cd api && docker-compose up",
-    "migrate": "cd api && npm run migrate",
     "api-test-watch": "cd api && docker-compose -f docker-compose.tests-services.yml up --remove-orphans",
+    "client-npm-i-sass": "docker-compose run --rm site npm i node-sass",
+    "client-npm-i": "docker-compose run --rm site npm i",
+    "npm-i": "npm run client-npm-i && npm run api-npm-i && npm run stop-containers",
+    "migrate": "cd api && npm run migrate",
     "stop-containers": "docker stop $(docker ps -a -q)",
     "show-containers": "docker ps --format 'table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}'",
-    "client-npm-i-sass": "docker-compose run --rm site npm i node-sass",
     "build-client": "cd client && npm i --only=dev && npm i && npm run build",
     "build-api": "cd api && npm i",
     "build": "npm i && npm run build-client && npm run build-api",
