--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,5 +48,5 @@ jobs:
               bash ./.circleci/add-ssh-hosts.sh
               git remote -v
               bash ./.circleci/install-packages.sh
-              bash ./.circleci/deploy-heroku.sh git@heroku.com:krei-test.git
+              bash ./.circleci/deploy-heroku.sh git@heroku.com:HEROKU_PROJECT_NAME.git
             fi
