--- a/package.json
+++ b/package.json
@@ -3,23 +3,29 @@
   "version": "1.0.0",
   "description": "Krei is an opinionated boilerplate that creates a full-stack React/Node Typescript project, with independent client and API structures in the same repository, ready to run and deploy with a neat and tidy base.",
   "scripts": {
+    "\n# Krei commands": "",
     "krei": "rm -rf .git && npm i && npm run api-npm-i && npm run stop-containers && npm run create-client && rm -rf client-generator",
     "create-client": "cd client-generator && npm run create && cd ../client && prettier --write */*.tsx --loglevel silent",
+    "\n# API commands": "",
+    "build-api": "cd api && npm i",
     "api-npm-i": "cd api && docker-compose run --rm api npm i",
     "api-start": "cd api && docker-compose up",
     "api-test-watch": "cd api && docker-compose -f docker-compose.tests-services.yml up --remove-orphans",
+    "migrate": "cd api && npm run migrate",
+    "seed": "cd api && npm run seed",
+    "\n# Client commands": "",
+    "build-client": "cd client && npm i --only=dev && npm i && npm run build",
     "client-npm-i-sass": "docker-compose run --rm site npm i node-sass",
     "client-npm-i": "docker-compose run --rm site npm i",
-    "npm-i": "npm run client-npm-i && npm run api-npm-i && npm run stop-containers",
-    "migrate": "cd api && npm run migrate",
+    "\n# Container commands": "",
     "stop-containers": "docker stop $(docker ps -a -q)",
     "show-containers": "docker ps --format 'table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}'",
-    "build-client": "cd client && npm i --only=dev && npm i && npm run build",
-    "build-api": "cd api && npm i",
+    "\n# General commands": "After executing the `npm run krei` command, run `npm build && npm start` to use the built version",
+    "npm-i": "npm run client-npm-i && npm run api-npm-i && npm run stop-containers",
     "build": "npm i && npm run build-client && npm run build-api",
     "heroku-postbuild": "npm run build",
-    "start": "npm run migrate && ts-node ./server/index.ts",
-    "dev": "docker-compose up"
+    "dev": "docker-compose up",
+    "start": "npm run migrate && ts-node ./server/index.ts"
   },
   "repository": {
     "type": "git",
