--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "redux-thunk-actions": "^1.2.1",
+    "redux-thunk-actions": "github:wgrisa/redux-thunk-actions",
     "store": "^2.0.12"
   },
   "scripts": {
