--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
+    "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/jest": "^23.3.8",
     "@types/node": "^10.12.1",
     "@types/platform": "^1.3.1",
