Fix app container

--- a/client-generator/resources/tsconfig.json
+++ b/client-generator/resources/tsconfig.json
@@ -14,5 +14,5 @@
     "noUnusedLocals": true,
     "baseUrl": "."
   },
-  "exclude": ["node_modules", "build", "scripts", "webpack"]
+  "exclude": ["node_modules", "build", "scripts", "webpack", "__mocks__"]
 }
