--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "krei",
+  "name": "aeboilerplate",
   "version": "1.0.0",
-  "description": "Krei is an opinionated boilerplate that creates a full-stack React/Node Typescript project, with independent client and API structures in the same repository, ready to run and deploy with a neat and tidy base.",
+  "description": "AEboilerplate is an opinionated boilerplate that creates a full-stack React/Node Typescript project, with independent client and API structures in the same repository, ready to run and deploy with a neat and tidy base.",
   "scripts": {
-    "\n# Krei commands": "",
-    "krei": "rm -rf .git && npm i && npm run api-npm-i && npm run stop-containers && npm run create-client && rm -rf client-generator",
+    "\n# AEboilerplate commands": "",
+    "aeboilerplate": "rm -rf .git && npm i && npm run api-npm-i && npm run stop-containers && npm run create-client && rm -rf client-generator",
     "create-client": "cd client-generator && npm run create && cd ../client && prettier --write */*.tsx --loglevel silent",
     "\n# API commands": "",
     "build-api": "cd api && npm i",
@@ -21,7 +21,7 @@
     "\n# Container commands": "",
     "stop-containers": "docker stop $(docker ps -a -q)",
     "show-containers": "docker ps --format 'table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}'",
-    "\n# General commands": "After executing the `npm run krei` command, run `npm build && npm start` to use the built version",
+    "\n# General commands": "After executing the `npm run aeboilerplate` command, run `npm build && npm start` to use the built version",
     "install-dependencies": "npm run client-npm-i && npm run api-npm-i && npm run stop-containers",
     "build": "npm i && npm run build-client && npm run build-api",
     "heroku-postbuild": "npm run build",
