Change stop containers command

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "client-npm-i": "docker-compose run --rm site npm i",
     "client-test": "cd client && npm run test",
     "\n# Container commands": "",
-    "stop-containers": "docker stop $(docker ps -a -q)",
+    "stop-containers": "docker-compose stop",
     "show-containers": "docker ps --format 'table {{.ID}}\t{{.Names}}\t{{.Status}}\t{{.Ports}}'",
     "\n# General commands": "After executing the `npm run aeboilerplate` command, run `npm build && npm start` to use the built version",
     "install-dependencies": "npm run client-npm-i && npm run api-npm-i && npm run stop-containers",
