Change name from client generator to be only generator

--- a/generator/package.json
+++ b/generator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ae-react-boilerplate-client-generator",
+  "name": "aeboilerplate-generator",
   "version": "1.0.0",
   "description": "",
   "main": "generator-runner.js",
