Change script from create client to be generator

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "AEboilerplate is an opinionated boilerplate that creates a full-stack React/Node Typescript project, with independent client and API structures in the same repository, ready to run and deploy with a neat and tidy base.",
   "scripts": {
     "\n# AEboilerplate commands": "",
-    "aeboilerplate": "rm -rf .git && npm i && npm run api-npm-i && npm run stop-containers && npm run create-client && rm -rf generator",
-    "create-client": "cd generator && npm run create && cd ../client && prettier --write */*.tsx --loglevel silent",
+    "aeboilerplate": "rm -rf .git && npm i && npm run api-npm-i && npm run stop-containers && npm run generator && rm -rf generator",
+    "generator": "cd generator && npm run create && cd ../client && prettier --write */*.tsx --loglevel silent",
     "\n# API commands": "",
     "build-api": "cd api && npm i",
     "api-npm-i": "cd api && docker-compose run --rm api npm i",
